[package]
name = "dioxus-fullstack"
version = "0.1.0"
authors = ["Jeremy Yin <jeremyyin2012@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
